DLCpar Change Log
-----------------------

dlcpar-0.9.1 (2013/12/11)
-----------------------
- fix installation

dlcpar-0.9 (2013/05/17)
-----------------------
- initial release
