@@ -1,6 +1,4 @@
 DLCpar
-http://compbio.mit.edu/dlcpar/
-Yi-Chieh Wu, with libraries contributed from Matthew Rasmussen
 
 =============================================================================
 DEPENDENCIES
@@ -10,7 +8,7 @@ dlcpar has the following requirements:
 - Python (2.7.1 or greater) -- http://python.org/
 - Numpy (1.10.4 or greater) -- http://www.numpy.org/
 
-dlcscape has the following additional requirements:
+dlcscape (under development) has the following additional requirements:
 - Shapely (1.2.18 or greater) -- https://pypi.python.org/pypi/Shapely
 - Matplotlib (1.3.1 or greater) -- http://matplotlib.org/
   (required only for view_dlcscape)
